[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/enemy/enemyBase.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/enemy/jumpingEnemy/jumpingEnemy.gd" type="Script" id=2]
[ext_resource path="res://src/enemy/enemyPoints/medium/MediumPoint.tscn" type="PackedScene" id=3]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 10, 20, 10 )

[sub_resource type="CubeMesh" id=2]
size = Vector3( 20, 40, 20 )

[node name="jumpingEnemy" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="CollisionShape" parent="." index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0 )
shape = SubResource( 1 )

[node name="folderOfPoints" parent="." index="1"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 10, 0 )

[node name="MediumPoint" parent="folderOfPoints" index="0" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 0, 0 )

[node name="MediumPoint2" parent="folderOfPoints" index="1" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 0, 0 )

[node name="MediumPoint3" parent="folderOfPoints" index="2" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -10, 18, 0 )

[node name="MediumPoint4" parent="folderOfPoints" index="3" instance=ExtResource( 3 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 11, 18, 0 )

[node name="MediumPoint5" parent="folderOfPoints" index="4" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 18, 10.5 )

[node name="MediumPoint6" parent="folderOfPoints" index="5" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, 18, -10.5 )

[node name="MediumPoint7" parent="folderOfPoints" index="6" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, -1, 10.5 )

[node name="MediumPoint8" parent="folderOfPoints" index="7" instance=ExtResource( 3 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.5, -1, -10.5 )

[node name="startJump" type="Timer" parent="." index="2"]
wait_time = 3.0
autostart = true

[node name="startJumpTween" type="Tween" parent="." index="3"]
playback_process_mode = 0

[node name="finishJumpTween" type="Tween" parent="." index="4"]
playback_process_mode = 0

[node name="MeshInstance" type="MeshInstance" parent="meshFolder" index="0"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 20, 0 )
mesh = SubResource( 2 )
material/0 = null

[connection signal="timeout" from="startJump" to="." method="_on_startJump_timeout"]
[connection signal="tween_all_completed" from="startJumpTween" to="." method="_on_startJumpTween_tween_all_completed"]
